add eth pub addr for payments in subscription
resolves golemfactory/golem-unlimited#149
